--- a/package.json
+++ b/package.json
@@ -10,21 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@react-three/drei": "^9.120.4",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "next": "^15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "three": "^0.171.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@react-three/fiber": "^8.17.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/three": "^0.171.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8",
