--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/react": "^19.0.2",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "next": "^15.1.2",
