--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/react": "^19.0.2",
+    "cloudinary": "^2.5.1",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
+    "mongoose": "^8.9.2",
     "next": "^15.1.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
