--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "three": "^0.171.0"
