--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.2",
+    "canvas-confetti": "^1.9.3",
     "cloudinary": "^2.5.1",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
