--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "mongoose": "^8.9.2",
     "next": "^15.1.2",
     "next-auth": "^4.24.11",
