--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "lucide-react": "^0.536.0",
     "mongoose": "^8.9.2",
     "next": "^15.1.2",
     "next-auth": "^4.24.11",
