--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.9.2",
-    "next": "^15.1.2",
+    "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "razorpay": "^2.9.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.14.0",
@@ -37,7 +37,7 @@
     "@types/node": "^20.17.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.1",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
